# nvidia-aerial-examples

./: .gitmodules  CMakeLists.txt  Customization.md  README.md
ai_rx_example/: CMakeLists.txt  README.md  ai_rx_example.cpp  ai_rx_module.cu  ai_rx_module.hpp  ai_rx_pipeline.cpp  ai_rx_pipeline.hpp  sionna_tx_rx_pipeline.py  train_ai_rx_model.py
canonical_ipipeline/: CMakeLists.txt  README.md  canonical_ipipeline_example.cpp
canonical_module_api/: CMakeLists.txt  README.md  canonical_module_api_example.cpp
channel_estimation/: CMakeLists.txt  README-ML.md  README.md  channel_est_pipeline.cpp  channel_est_pipeline.hpp  channel_estimation_example.cpp  channel_estimation_module.cu  channel_estimation_module.hpp  channel_estimation_pipeline.cpp  channel_estimation_pipeline.hpp  channel_estimator.cu  channel_estimator.hpp  generate_channel_estimation_model.py  ml_channel_estimator_tensorrt.cu  ml_channel_estimator_tensorrt.hpp
channel_estimation/tests/: channel_estimator_test.cpp  channel_pipeline_test.cpp
cmake/: FindAerialFramework.cmake  FindTensorRT.cmake
common/: CMakeLists.txt  data_generators.hpp  perf_utils.hpp  test_utils.hpp
docs/: api_reference.md  getting_started.md  performance_guide.md
fft_processing/: CMakeLists.txt  README.md  fft_example.cpp  fft_module.hpp  fft_pipeline.cpp  fft_pipeline.hpp  fft_pipeline_old.hpp  fft_processing_example.cpp  fft_processing_module.cu  fft_processing_module.hpp  fft_processing_pipeline.cpp  fft_processing_pipeline.hpp
fft_processing/tests/: fft_test.cpp  pipeline_test.cpp
mimo_detection/: CMakeLists.txt  README.md  framework_stubs.cpp  mimo_detection_example.cpp  mimo_detection_module.cu  mimo_detection_module.hpp  mimo_detection_pipeline.cu  mimo_detection_pipeline.hpp  mimo_detector.hpp  mimo_example.cpp  mimo_pipeline.cu  mimo_pipeline.hpp  mimo_pipeline_complex.hpp  mimo_pipeline_impl.cu  mimo_pipeline_impl_complex.cu
mimo_detection/tests/: mimo_test.cpp  pipeline_test.cpp
modulation_mapping/: CMakeLists.txt  README.md  modulation_example.cpp  modulation_mapping_example.cpp  modulation_mapping_module.cu  modulation_mapping_module.hpp  modulation_mapping_pipeline.cu  modulation_mapping_pipeline.hpp  modulation_pipeline.cpp  modulation_pipeline.cpp.bak  modulation_pipeline.hpp  modulation_pipeline_old.cpp  modulator.cu  modulator.hpp
modulation_mapping/tests/: modulation_test.cpp  pipeline_test.cpp
neural_beamforming/: CMakeLists.txt  README.md  TENSORRT_INSTALL.md  generate_beamforming_model.py  neural_beamforming_example.cpp  neural_beamforming_example_simple.cpp  neural_beamforming_ml_example.cpp  neural_beamforming_ml_example_simple.cpp  neural_beamforming_module.cu  neural_beamforming_module.hpp  neural_beamforming_pipeline.cpp  neural_beamforming_pipeline.cu  neural_beamforming_pipeline.hpp  neural_beamforming_pipeline_simple.cpp  neural_beamforming_pipeline_simple.hpp
neural_beamforming/tests/: beamforming_test.cpp  pipeline_test.cpp
path_loss_prediction/: CMakeLists.txt  README.md  generate_synthetic_data.py  path_loss_prediction_example.cpp  path_loss_prediction_module.cu  path_loss_prediction_module.hpp  path_loss_prediction_module_example.cpp  path_loss_prediction_pipeline.cpp  path_loss_prediction_pipeline.hpp  train_path_loss_models.py
quill/: LogMacros.h
scripts/: benchmark.sh  build.sh  test_all.sh
user_scheduling/: CMakeLists.txt  README.md  generate_user_scheduling_data.py  train_user_scheduling_model.py  user_scheduling_example.cpp  user_scheduling_module.cu  user_scheduling_module.hpp  user_scheduling_pipeline.cpp  user_scheduling_pipeline.hpp
